[package]
name        = 'pallet-farm-rpc'
authors     = ["DICO-TEAM"]
description = 'dico-chain farm Pallet rpc'
license     = 'Apache 2.0'
version     = '1.0.0'
homepage    = 'https://github.com/DICO-TEAM/dico-chain'
repository  = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}

[dependencies.pallet-farm-rpc-runtime-api]
default-features = false
package = 'pallet-farm-rpc-runtime-api'
path = 'runtime-api'


[dependencies]
primitive-types     = { default-features = false, version = '0.10.1' }
codec                 = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
serde                 = { version = '1', optional = true }
jsonrpc-core        = { version = '15.1.0' }
jsonrpc-core-client = { version = '15.1.0' }
jsonrpc-derive      = { version = '15.1.0' }


sp-std        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-api        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sc-rpc-api    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-rpc        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

[features]
default = ['std']
std = [
    'pallet-farm-rpc-runtime-api/std',
    'serde',
    'codec/std',
]

