[package]
name        = "pallet-farm-rpc"
authors     = ["DICO-TEAM"]
description = "dico-chain farm Pallet rpc"
license     = "Apache 2.0"
version     = "1.0.0"
homepage    = "https://github.com/DICO-TEAM/dico-chain"
repository  = "https://github.com/DICO-TEAM/dico-chain"
edition     = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false}

[dependencies.pallet-farm-rpc-runtime-api]
default-features = false
package = "pallet-farm-rpc-runtime-api"
path = "runtime-api"


[dependencies]
codec               = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
serde               = { version = "1", optional = true }
jsonrpc-core        = { version = "18.0.0" }
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive      = { version = "18.0.0" }
futures             = { version = "0.3.15"}



sp-std        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-api        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sc-rpc-api    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-rpc        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

[features]
default = ['std']
std = [
    'pallet-farm-rpc-runtime-api/std',

    'sp-std/std',
    'sp-api/std',
    'sp-runtime/std',
    'serde',
    'codec/std',
]

