[package]
name       = "pallet-ico-rpc"
authors    = ["DICO-TEAM"]
version    = "1.0.0"
license    = 'Apache 2.0'
homepage   = 'https://github.com/DICO-TEAM/dico-chain'
repository = 'https://github.com/DICO-TEAM/dico-chain'
edition    = '2018'


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.codec]
version = "2.0.0"
package = "parity-scale-codec"

[dependencies]
jsonrpc-derive = {version = "15.1.0"}
jsonrpc-core = {version = "15.1.0"}
sc-rpc-api = { version = "0.9.0"}
jsonrpc-core-client = { version = "15.1.0"}
sp-api = "3.0.0"
sp-rpc = "3.0.0"
sp-runtime = "3.0.0"
sp-blockchain = "3.0.0"

# local
pallet-ico-rpc-runtime-api = { path = "../runtime-api"}


#[features]
#default = ["std"]
#std = [
#    "jsonrpc-derive/std",
#]