[package]
name       = "pallet-ico-rpc"
authors    = ["DICO-TEAM"]
version    = "1.0.0"
license    = 'Apache 2.0'
homepage   = 'https://github.com/DICO-TEAM/dico-chain'
repository = 'https://github.com/DICO-TEAM/dico-chain'
edition     = '2021'


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
codec               = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }

#jsonrpc-core        = { version = '18.0.0' }
#jsonrpc-core-client = { version = '18.0.0' }
#jsonrpc-derive      = { version = '18.0.0' }
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

sc-rpc-api          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
sp-api              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
sp-rpc              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
sp-runtime          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
sp-blockchain       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }


# local
pallet-ico-rpc-runtime-api = { path = "../runtime-api"}

[features]
default = ['std']
std = [
    "codec/std",
    "sp-api/std",
    "sp-runtime/std",
]
