[package]
name = "pallet-ico-rpc-runtime-api"
version = "1.0.0"
authors = ["barbara <dicobarbara@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-api = {version = "3.0.0", default-features = false}
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
[features]
default = ["std"]
std = [
    "sp-api/std",
    "codec/std",
]
